--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" a href="style.css">
     <title>HYDRO  | Home page</title>
 </head>
 <body>
     <header>
+         <a href="index.html"> HYDRO</a>
 
-        <div class="logo">
-            <a href="index.html"> HYDRO</a>
-        </div>
-        
-        <nav>
-            <ul id="navbar">
+
+        <nav id="navbar">
+            <ul>
                 <li><a class="active"></a>Home</li>
                 <li>Services</li>
                 <li>Game</li>
             </ul>
         </nav>
-        
+
     </header>
 
 
