--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <nav id="navbar">
             <ul>
-                <li><a class="active"></a>Home</li>
-                <li>Services</li>
-                <li>Game</li>
+                <li><a  href="#" class="active">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Game</a></li>
             </ul>
         </nav>
 
