--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-         <div><a href="index.html" class="logo"> HYDRO</a></div>
+         <div><a href="index.html" class="logo"> HY<span>DRO</span></a></div>
 
 
         <nav id="navbar">
@@ -25,7 +25,9 @@
 
     </header>
 
-
+    <section class="landing-page">
+        
+    </section>
 
 
 </body>
