--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     </header>
 
     <section class="landing-page">
-        
+        <div>
+            <h1>MAKE EVERY DROP COUNT</h1>
+            <P>"Water Conservation: A Small Effort Today, A Big Impact Tomorrow."</P>
+            <button>SAVE WATER</button>
+        </div>
     </section>
 
 
