--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 <body>
     <header>
          <div><a href="index.html" class="logo"> HY<span>DRO</span></a></div>
-
-
         <nav id="navbar">
             <ul>
                 <li><a  href="#" class="active">Home</a></li>
@@ -22,9 +20,7 @@
                 <li><a href="#">Game</a></li>
             </ul>
         </nav>
-
     </header>
-
     <section class="landing-page">
         <div>
             <h1>MAKE EVERY DROP COUNT</h1>
@@ -32,7 +28,6 @@
             <button>SAVE WATER</button>
         </div>
     </section>
-
-
+    <session class=""
 </body>
 </html>
