--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <div>
             <h1>MAKE EVERY DROP COUNT</h1>
             <P>"Water Conservation: A Small Effort Today, A Big Impact Tomorrow."</P>
-            <button>SAVE WATER</button>
+            <button class="button">SAVE WATER</button>
         </div>
     </section>
-    <session class=""
+    <session class="">
+
+    </session>
 </body>
 </html>
