--- a/index.html
+++ b/index.html
@@ -28,8 +28,30 @@
             <button class="button">SAVE WATER</button>
         </div>
     </section>
-    <session class="">
+    <section id="feature" class="section-pl">
+        <br><h1><Center>Dispose of wastewater from properties not connected to mains drainage</center></h1>
+        <div class="fe-box">
+            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <h6>What</h6>
+            <p>A biodigester is a treatment plant that safely treats and disposes of wastewater from properties without access to black and grey water drainage.</p>
+        </div>
+        <div class="fe-box">
+            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <h6>How</h6>
+            <p>The tank uses natural micro-organisms and oxygen to break down solids in the wastewater. Biodigesters in our range produce a clear odourless effluent for safe disposal.</p>
+        </div>
+        <div class="fe-box">
+            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <h6>Why</h6>
+            <p>Biodigesters are available in a wide range of sizes for homes and businesses and are self-contained. No chemicals are needed and some do not need to be emptied at all, so nasty work is avoided.</p>
+        </div>
+            <div class="box">
 
-    </session>
+        <h1>Find Nearest Water Treatment Facilty</h1>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7977.625404273243!2d36.82481640456302!3d-1.2864317677531336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d5ef82815f%3A0x2b087c5079b170a9!2sImenti%20House!5e0!3m2!1sen!2ske!4v1666340237263!5m2!1sen!2ske" 
+              width="90%" height="400" style="border:0; margin-left: 5%;" allowfullscreen="true" loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div> 
+        
 </body>
 </html>
