--- a/index.html
+++ b/index.html
@@ -29,22 +29,38 @@
         </div>
     </section>
     <section id="feature" class="section-pl">
-        <br><h1><Center>Dispose of wastewater from properties not connected to mains drainage</center></h1>
+        <div class="fe-text">
+            <br><h1><center>Dispose of waste water from properties not connected to mains drainage</center></h1>
+        </div>
+       
+        <div class="fe-main">
         <div class="fe-box">
-            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <img src="img/icons8-water-tank-64 (4).png" alt="">
             <h6>What</h6>
-            <p>A biodigester is a treatment plant that safely treats and disposes of wastewater from properties without access to black and grey water drainage.</p>
+            <p><b>A biodigester is a treatment plant that safely treats and disposes of wastewater from
+                 properties without access to black and grey water drainage.</b></p>
         </div>
         <div class="fe-box">
-            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <img src="img/icons8-water-tank-64 (4).png" alt="">
             <h6>How</h6>
-            <p>The tank uses natural micro-organisms and oxygen to break down solids in the wastewater. Biodigesters in our range produce a clear odourless effluent for safe disposal.</p>
+            <p><b>The tank uses natural micro-organisms and oxygen to break down solids in the wastewater. 
+                Biodigesters in our range produce a clear odourless effluent for safe disposal.</b></p>
         </div>
         <div class="fe-box">
-            <img src="img/icons8-water-tank-64 (1).png" alt="">
+            <img src="img/icons8-water-tank-64 (4).png" alt="">
             <h6>Why</h6>
-            <p>Biodigesters are available in a wide range of sizes for homes and businesses and are self-contained. No chemicals are needed and some do not need to be emptied at all, so nasty work is avoided.</p>
+            <p><b>Biodigesters are available in a wide range of sizes for homes and businesses and are 
+                self-contained. No chemicals are needed and some do not need to be emptied at all, 
+                so nasty work is avoided.</b></p>
         </div>
+
+        <div class="fe-button">
+            <a href="Learn More">Learn More</a>
+        </div>
+
+
+    </div>
+    </section>
             <div class="box">
 
         <h1>Find Nearest Water Treatment Facilty</h1>
