Landing page format

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </section>
     <section id="feature" class="section-pl">
-        <br><h1><Center>Dispose of wastewater from properties not connected to mains drainage</center></h1>
+        <br><h1>Dispose of wastewater from properties not connected to mains drainage</h1>
         <div class="fe-box">
             <img src="img/icons8-water-tank-64 (1).png" alt="">
             <h6>What</h6>
