--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     </section>
     <section id="feature" class="section-pl">
-        <div class="fe-text">
-            <br><h1><center>Dispose of waste water from properties not connected to mains drainage</center></h1>
+         <div class="fe-text">
+            <br><h3>Dispose of waste water from properties not connected to mains drainage</h3><br><br>
         </div>
        
         <div class="fe-main">
@@ -59,11 +59,11 @@
         </div>
 
 
-    </div>
+    </div><br><br>
     </section>
-            <div class="box">
+    <br><div class="box">
 
-        <h1>Find Nearest Water Treatment Facilty</h1>
+        <h2>Find Nearest Water Treatment Facilty</h2><br>
                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7977.625404273243!2d36.82481640456302!3d-1.2864317677531336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d5ef82815f%3A0x2b087c5079b170a9!2sImenti%20House!5e0!3m2!1sen!2ske!4v1666340237263!5m2!1sen!2ske" 
               width="90%" height="400" style="border:0; margin-left: 5%;" allowfullscreen="true" loading="lazy" 
               referrerpolicy="no-referrer-when-downgrade"></iframe>
