--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 
 
     <section id="feature" class="section-pl">
-        <div class="fe-text">
-            <br><h1>Dispose of waste water from properties not connected to mains drainage</h1>
+
+        <br><h1>Dispose of wastewater from properties not connected to mains drainage</h1>
+         <div class="fe-text">
+            <br><h3>Dispose of waste water from properties not connected to mains drainage</h3><br><br>
         </div>
        
         <div class="fe-main">
