--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="fe-button">
-            <a href="https://www.podtanks.com" target="blank">Learn More</a>
+            <a href="https://www.podtanks.com" target="_blank">Learn More</a>
         </div>
     </div>
     </section>
