--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
             <button class="button">SAVE WATER</button>
         </div>
     </section>
-
+    
+    <section id = "feature" class = "section-p">
+        <div class="fe-text"></div>
+        <br><h1>CLIMATE CHANGE AND WATER TREATMENT</h1>
+    <p> Currently the world has experienced adverse changes in climate which have affected the availability of water
+        this is to say that there is limited access to clean water sources, however in correspondence with the climatic changes, 
+        technology has made it possible to mitigate the effects of water scarcity through inventions of methods among them including 
+        water treatment. Water treatment is the term that referrs to purification of water for domestic or industrial use. 
+        Generally it involves production of clean water through the following various methods drinking water treatment, wastewater treatment 
+        and industrial water treatment. This website makes it easy for parties to be able to access water treatment facilitieds particularly
+        around their counties. Then through access they can help with treatment or create more facilities. If you are looking towards 
+        making every drop count then you are at the right place.
+    </p>
+    </section>
 
     <section id="feature" class="section-pl">
         <div class="fe-text">
