save water button linked

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div>
             <h1>MAKE EVERY DROP COUNT</h1>
             <P>"Water Conservation: A Small Effort Today, A Big Impact Tomorrow."</P>
-            <button class="button">SAVE WATER</button>
+            <a href="#Game">SAVE WATER</a>
         </div>
     </section>
 
